--- a/vercel.json
+++ b/vercel.json
@@ -43,5 +43,7 @@
       "COMPOSER_ALLOW_SUPERUSER": "1"
     }
   },
-  "buildCommand": "chmod +x build.sh && ./build.sh"
+  "buildCommand": "chmod +x build.sh && ./build.sh",
+  "outputDirectory": "public",
+  "installCommand": "composer install --no-dev --optimize-autoloader --no-interaction && npm install"
 }
