Fix Vercel build configuration
- Set proper build and install commands for Vite
- Set outputDirectory to public for Laravel
- Remove PHP commands from build process
- Add error handling for database initialization
- Focus on frontend build during deployment

--- a/vercel.json
+++ b/vercel.json
@@ -37,5 +37,8 @@
     "SESSION_DRIVER": "cookie",
     "DB_CONNECTION": "sqlite",
     "DB_DATABASE": "/tmp/database.sqlite"
-  }
+  },
+  "buildCommand": "npm run build",
+  "outputDirectory": "public",
+  "installCommand": "npm install"
 }
